--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -21,7 +21,7 @@
         state: directory
 
     - name: Init test repository
-      shell: git init
+      command: git init  # noqa 303
       args:
         chdir: "{{ git_repo_path }}"
         creates: .git
