Add namespace for Ansible Galaxy

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   role_name: gitconfig
+  namespace: boutetnico
   author: Nicolas Boutet
   description: Configure git.
   license: MIT
